--- a/projct1.css
+++ b/projct1.css
@@ -61,7 +61,8 @@ button {
     text-align: center;
     padding: 20px;
 }
-button:hover{
+
+button:hover {
     background-color: red;
 }
 
@@ -86,247 +87,42 @@ footer {
     text-align: center;
 }
 
-@media screen and (max-width:750px) and (max-width:0px),
-screen and (max-height:667px) {
+@media screen and (max-width:786px) {
     body {
-        width: 840px;
-        justify-content: center;
+        width: 700px;
     }
 
     .block {
+        width: 700px;
         display: block;
+        margin-bottom: 100px;
     }
 
     .right {
+        width: 700px;
         margin: 0;
         padding: 0;
     }
 
 
     h2 {
-        font-size: 90px;
+        font-size: 70px;
         margin-top: 10px;
     }
 
     p {
         width: 90%;
-        font-size: 50px;
+        font-size: 40px;
         margin-top: 10px;
     }
 
     button {
-        margin-top: 30px;
+        margin: 30px auto;
+        justify-content: center;
     }
 
     footer {
         font-size: 20px;
-        margin-top: 0px;
-    }
-}
-
-@media screen and (max-width:828px) and (max-width:820px),
-screen and (max-height:896px) {
-    h1 {
-        font-size: 40px;
-        padding-left: 30px;
-    }
-
-    img {
-        padding-left: 30px;
-    }
-
-    h2 {
-        margin-top: 40px;
-    }
-
-    p {
-        width: 100%;
-        margin-top: 40px;
-    }
-
-    button {
-        margin-top: 80px;
-        font-size: 40px;
-    }
-
-    footer {
-        margin-top: 800px;
-        font-size: 40px;
-    }
-}
-
-@media screen and (max-width:780px) and (max-width:750px),
-screen and (max-height:844px) {
-    h1 {
-        font-size: 60px;
-    }
-
-    img {
-        padding-left: 30px;
-    }
-
-    h2 {
-        margin-top: 35px;
-    }
-
-    p {
-        width: 100%;
-        margin-top: 40px;
-    }
-
-    button {
-        margin-top: 80px;
-        font-size: 40px;
-    }
-
-    footer {
-        margin-top: 300px;
-        font-size: 40px;
-    }
-}
-
-@media screen and (max-width:720px) and (max-width:0px),
-screen and (max-height:740px) {
-    h1 {
-        font-size: 60px;
-    }
-
-    img {
-        padding-left: 30px;
-    }
-
-    h2 {
-        margin-top: 35px;
-    }
-
-    footer {
-        margin-top: 120px;
-        font-size: 40px;
-    }
-}
-
-
-@media screen and (max-width:820px) and (max-width:780px),
-screen and (max-height:1180px) {
-    h1 {
-        font-size: 50px;
-    }
-
-    body {
-        width: 800px;
-    }
-
-    img {
-        margin: 0;
-        padding: 0;
-    }
-
-    .block {
-        display: block;
-        margin: 0;
-    }
-
-    .right {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-
-    h2 {
-        text-align: start;
-        font-size: 90px;
-    }
-
-    p {
-        width: 80%;
-        text-align: start;
-        font-size: 60px;
-    }
-
-    button {
-        font-size: 50px;
-    }
-
-    footer {
-        font-size: 40px;
-    }
-}
-
-@media screen and (max-width:912px) and (max-width:828px),
-screen and (max-height:1368px) {
-    h1 {
-        font-size: 50px;
-    }
-
-    body {
-        width: 900px;
-    }
-
-    img {
-        margin: 0;
-        padding: 0;
-    }
-
-    .block {
-        display: block;
-        margin: 0;
-    }
-
-    .right {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-    }
-
-    h2 {
-        text-align: start;
-        font-size: 90px;
-    }
-
-    p {
-        width: 80%;
-        text-align: start;
-        font-size: 60px;
-    }
-
-    button {
-        font-size: 50px;
-    }
-
-    footer {
-        font-size: 40px;
-    }
-}
-
-@media screen and (max-width:1280px) and (max-width:912px),
-screen and (max-height:653px) {
-
-    button {
-        margin-top: 15 0px;
-    }
-
-    footer {
-        margin-top: 500px;
-    }
-}
-
-@media screen and (max-width:1280px) and(max-width:950px),
-screen and (max-height:800px) {
-    body {
-        width: 1200px;
-    }
-
-    button {
-        margin-top: 15 0px;
-    }
-
-    footer {
-        margin-top: 200px;
-    }
-}
-
-@media screen and (max-width:1280px)and (max-width:2000px) {
-    body {
-        width: 1200px;
+        margin-top: -100px;
     }
 }
